[project]
name = "yellow_algorithm"
version = "0.1.0"
description = "A description of your project"
authors = [
    { name = "Tsimur Hadeliya", email = "tgadeliya@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pytest==8.3.5",
    "black"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"